<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FormPersonalInformation">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            >
            <TableRow
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/field_name"
                    android:fontFamily="@string/font_family_black"
                    />
                <EditText
                    android:id="@+id/nombre"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@string/font_family_light"
                    />
            </TableRow>
            <TableRow
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/field_lastNameF"
                    android:fontFamily="@string/font_family_black"
                    />
                <EditText
                    android:id="@+id/apellidoP"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@string/font_family_light"
                    />
            </TableRow>
            <TableRow
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/field_lastNameM"
                    android:fontFamily="@string/font_family_black"
                    />
                <EditText
                    android:id="@+id/apellidoM"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@string/font_family_light"
                    />
            </TableRow>
            <TableRow
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/field_telefono"
                    android:fontFamily="@string/font_family_black"
                    />
                <EditText
                    android:id="@+id/telefono"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@string/font_family_light"
                    />
            </TableRow>
            <TableRow
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/field_age"
                    android:fontFamily="@string/font_family_black"
                    />
                <EditText
                    android:id="@+id/edad"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@string/font_family_light"
                    />
            </TableRow>
            <TableRow
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/field_correo"
                    android:fontFamily="@string/font_family_black"
                    />
                <EditText
                    android:id="@+id/correo"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@string/font_family_light"
                    />
            </TableRow>
            <TableRow
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/calleNumero"
                    android:fontFamily="@string/font_family_black"
                    />
                <EditText
                    android:id="@+id/calleNumero"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@string/font_family_light"
                    />
            </TableRow>
            <TableRow
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/field_colonia"
                    android:fontFamily="@string/font_family_black"
                    />
                <EditText
                    android:id="@+id/colonia"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@string/font_family_light"
                    />
            </TableRow>
            <TableRow
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/field_ciudad"
                    android:fontFamily="@string/font_family_black"
                    />
                <EditText
                    android:id="@+id/ciudad"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@string/font_family_light"
                    />
            </TableRow>
            <TableRow
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/field_estado"
                    android:fontFamily="@string/font_family_black"
                    />
                <EditText
                    android:id="@+id/estado"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@string/font_family_light"
                    />
            </TableRow>
            <TableRow
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/field_estadoCivil"
                    android:fontFamily="@string/font_family_black"
                    />
                <EditText
                    android:id="@+id/estadoCivil"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@string/font_family_light"
                    />
            </TableRow>
            <TableRow
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/field_nacionalidad"
                    android:fontFamily="@string/font_family_black"
                    />
                <EditText
                    android:id="@+id/nacionalidad"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@string/font_family_light"
                    />
            </TableRow>
        </TableLayout>
    </ScrollView>


</FrameLayout>