<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LaboralInformation">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        >
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            >
            <TableRow
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/field_nomina"
                    android:fontFamily="@string/font_family_black"
                    />
                <TextView
                    android:id="@+id/nomina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@string/font_family_light"
                    />
            </TableRow>
            <TableRow
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/field_puesto"
                    android:fontFamily="@string/font_family_black"
                    />
                <TextView
                    android:id="@+id/puesto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@string/font_family_light"
                    />
            </TableRow>
            <TableRow
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/field_rfc"
                    android:fontFamily="@string/font_family_black"
                    />
                <TextView
                    android:id="@+id/rfc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@string/font_family_light"
                    />
            </TableRow>
            <TableRow
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/field_curp"
                    android:fontFamily="@string/font_family_black"
                    />
                <TextView
                    android:id="@+id/curp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@string/font_family_light"
                    />
            </TableRow>
            <TableRow
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/field_nss"
                    android:fontFamily="@string/font_family_black"
                    />
                <TextView
                    android:id="@+id/nss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@string/font_family_light"
                    />
            </TableRow>
            <TableRow
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/field_escolaridad"
                    android:fontFamily="@string/font_family_black"
                    />
                <TextView
                    android:id="@+id/escolaridad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@string/font_family_light"
                    />
            </TableRow>
        </TableLayout>
    </ScrollView>

</FrameLayout>