<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformacionPrincipal"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@null"
            android:foregroundGravity="left"
            android:src="@android:drawable/ic_menu_revert"
            android:onClick="previusActivity"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@mipmap/user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TableRow
                android:gravity="center_horizontal"
                android:layout_marginTop="15dp">
                <TextView
                    android:text="@string/field_name"
                    android:textSize="20dp"
                    android:fontFamily="Corbel"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:id="@+id/nombre"
                    android:text="@string/field_name"
                    android:textSize="20dp"
                    android:fontFamily="Corbel"
                    android:textStyle="bold"/>
            </TableRow>
            <TableRow
                android:gravity="center_horizontal"
                android:layout_marginTop="15dp">
                <TextView
                    android:text="@string/field_lastNameF"
                    android:textSize="20dp"
                    android:fontFamily="Corbel"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:id="@+id/apellidoP"
                    android:text="@string/field_name"
                    android:textSize="20dp"
                    android:fontFamily="Corbel"
                    android:textStyle="bold"/>
            </TableRow>
            <TableRow
                android:gravity="center_horizontal"
                android:layout_marginTop="15dp">
                <TextView
                    android:text="@string/field_lastNameM"
                    android:textSize="20dp"
                    android:fontFamily="Corbel"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:id="@+id/apellidoM"
                    android:text="@string/field_name"
                    android:textSize="20dp"
                    android:fontFamily="Corbel"
                    android:textStyle="bold"/>
            </TableRow>
            <TableRow
                android:gravity="center_horizontal"
                android:layout_marginTop="15dp">
                <TextView
                    android:text="@string/field_nomina"
                    android:textSize="20dp"
                    android:fontFamily="Corbel"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:id="@+id/nomina"
                    android:text="@string/field_name"
                    android:textSize="20dp"
                    android:fontFamily="Corbel"
                    android:textStyle="bold"/>
            </TableRow>
            <TableRow
                android:gravity="center_horizontal"
                android:layout_marginTop="15dp">
                <TextView
                    android:text="@string/field_telefono"
                    android:textSize="20dp"
                    android:fontFamily="Corbel"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:id="@+id/telefono"
                    android:text="----"
                    android:textSize="20dp"
                    android:fontFamily="Corbel"
                    android:textStyle="bold"/>
            </TableRow>
            <TableRow
                android:gravity="center_horizontal"
                android:layout_marginTop="15dp">
                <TextView
                    android:text="@string/field_puesto"
                    android:textSize="20dp"
                    android:fontFamily="Corbel"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:id="@+id/puesto"
                    android:text="----"
                    android:textSize="20dp"
                    android:fontFamily="Corbel"
                    android:textStyle="bold"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ver mas..."
        android:onClick="goToCompleteInformation"/>
</LinearLayout>